<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/custom_title_height"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:background="@color/btn"
    android:orientation="horizontal" 
    android:baselineAligned="false">

    <LinearLayout
        android:id="@+id/home_tag_id"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:contentDescription="@string/img"
            android:layout_width="wrap_content"
            android:layout_height="30dip"
            android:scaleType="centerInside"
            android:src="@drawable/homepic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textColor="@drawable/bottomtext" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/message_tag_id"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:contentDescription="@string/img"
            android:layout_width="wrap_content"
            android:layout_height="30dip"
            android:scaleType="centerInside"
            android:src="@drawable/messagepic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textColor="@drawable/bottomtext" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/find_tag_id"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:contentDescription="@string/img"
            android:layout_width="wrap_content"
            android:layout_height="30dip"
            android:scaleType="centerInside"
            android:src="@drawable/findpic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find"
            android:textColor="@drawable/bottomtext" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/myinfo_tag_id"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:contentDescription="@string/img"
            android:layout_width="wrap_content"
            android:layout_height="30dip"
            android:scaleType="centerInside"
            android:src="@drawable/myinfopic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myinfo"
            android:textColor="@drawable/bottomtext" />
    </LinearLayout>

</LinearLayout>