<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EEEEEE" >

    <RelativeLayout
        android:id="@+id/rl_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_title_height"
        android:layout_alignParentTop="true"
        android:background="#272727"
        android:orientation="horizontal" >

<!--         <Button -->
<!--             android:id="@+id/btn_back" -->
<!--             android:layout_width="wrap_content" -->
<!--             android:layout_height="match_parent" -->
<!--             android:layout_centerVertical="true" -->
<!--             android:background="@drawable/selector_btn_back" -->
<!--             android:text="@string/back" -->
<!--             android:textColor="@color/white" -->
<!--             android:textSize="15sp" /> -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/chat"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_chat_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_more"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/chat_add" />

            <EditText
                android:id="@+id/et_sendmessage"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="7"
                android:hint="@string/qingshuru"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="2"
                android:background="@drawable/btn_selector"
                android:padding="5dp"
                android:text="@string/fasong"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:baselineAligned="false"
            android:id="@+id/ll_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white" 
                android:orientation="vertical">

                <ImageButton
                    android:contentDescription="@string/img"
                    android:id="@+id/chat_vedio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:src="@drawable/chat_vedio" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/shiping" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white" 
                android:orientation="vertical">

                <ImageButton
                    android:contentDescription="@string/img"
                    android:id="@+id/chat_pic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:src="@drawable/chat_pic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tupian" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white" 
                android:orientation="vertical">

                <ImageButton
                    android:contentDescription="@string/img"
                    android:id="@+id/chat_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:src="@drawable/chat_location" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dingwei" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white" 
                android:orientation="vertical">
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/ll_chat_bottom"
        android:layout_below="@id/rl_layout"
        android:cacheColorHint="#00000000"
        android:divider="@null"
        android:dividerHeight="5dp"
        android:scrollbars="none" />

</RelativeLayout>